@@ -33,8 +33,11 @@ apport (0.45) UNRELEASED; urgency=low
       more).
   * use-local: Adapt to new core_pattern kernel interface.
   * apport: Improve logging of exceptions, include environment variables.
+  * apport/report.py test suite: Use gdb to generate a test core dump, do not
+    rely on kill(SIGSEGV) and the kernel to do it (since we now use a pipe in
+    core_pattern).
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 25 Jan 2007 18:22:24 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 27 Jan 2007 09:46:09 +0100
 
 apport (0.44) feisty; urgency=low
 
